# vibe-tgm

./: .gitignore  Cargo.toml  Justfile  Justfile-build  Justfile-game  Justfile-test  README.md  rustfmt.toml
.scripts/: dump_cursor_prompts.py  multi_evaluator.sh  no_hyphen_filenames.sh
crates/tgm_client/: Cargo.toml
crates/tgm_client/assets/audio/: bgm1.opus  bgm1_intro.opus  bgm2.opus
crates/tgm_client/src/: attract.rs  audio.rs  backgrounds.rs  hud.rs  main.rs  ogg_opus.rs  persist.rs  playfield_fx.rs  postprocess.rs  theme.rs  title_codes.rs
crates/tgm_core/: Cargo.toml
crates/tgm_core/src/: autoplay.rs  board.rs  board_big.rs  constants.rs  game.rs  grade.rs  gravity.rs  level.rs  lib.rs  options.rs  piece.rs  piece_big.rs  randomizer.rs  rotation.rs  rotation_big.rs  score.rs
crates/tgm_core/tests/: ars_rotation_exhaustive.rs  autoplay_survival.rs  smoke.rs
packaging/macos/: Info.plist.template
