[package]
name = "tgm_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tgm_core = { path = "../tgm_core" }
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
